--- a/documentation/docs/components/operators/snippets/node-perf-wg.mdx
+++ b/documentation/docs/components/operators/snippets/node-perf-wg.mdx
@@ -1,4 +1,6 @@
 import { Callout } from 'nextra/components';
+import { Steps } from 'nextra/components';
+import { Green, Yellow, Red, Gray } from 'components/severity.jsx'
 
 ## WireGuard: Gateways Performance Calculation
 
@@ -7,14 +9,87 @@ import { Callout } from 'nextra/components';
 <Callout type="info" emoji="ℹ️">
 **Note that there is only one binary `nym-node` for [all network functionalities](/operators/nodes/nym-node/setup#functionality-mode) (defined by a positional argument `--mode`).**
 
-When we say *Exit Gateway* in connection to Wireguard,, we talk about a `nym-node` running in a mode Exit Gateway (`--mode exit-gateway`) with Wireguard enabled. Such node is listed in [NymVPN application](https://nym.com) as an Exit Gateway and an Entry Gateway for both dVPN (2-hop) and Mixnet (5-hop) options. That's because every Exit Gateway can serve as an Entry, not vice versa for Mixnet and every Gateway with Wireguard enabled option (`--wireguard-enabled true`) can always serve as both Entry and Exit for dVPN (provided that they are correctly [configured](/operators/nodes/nym-node/configuration)).
+When we say *Exit Gateway* in connection to Wireguard, we talk about a `nym-node` running in a mode Exit Gateway (`--mode exit-gateway`) with Wireguard enabled. Such node is listed in [NymVPN application](https://nym.com) as an Exit Gateway and an Entry Gateway for both dVPN (2-hop) and Mixnet (5-hop) options. That's because every Exit Gateway can serve as an Entry, not vice versa for Mixnet and every Gateway with Wireguard enabled option (`--wireguard-enabled true`) can always serve as both Entry and Exit for dVPN (provided that they are correctly [configured](/operators/nodes/nym-node/configuration)).
 </Callout>
 
-This chapter explains how is Gateway's performance meassured and what's the design behind selection of Gateways for NymVPN application. Understanding the logic helps operatorts to triage their server and node configuration.
-
-The main source of truth for NymVPN Gateways is an API endpoint [nymvpn.com/api/public/v1/directory/gateways](https://nymvpn.com/api/public/v1/directory/gateways) storing all stats about available nodes. The sections of this chapter explaiun how are these stats measured and what is their significance.
-
 **Please note that even the most perfectly configured Gateway, running on the strongest machine may not always be listed as a suggested node in the app. If you are interested to learn the details why, check out the [Gateway Probe Details page](/operators/nodes/performance-and-testing/gateway-probe-details).**
+
+### Summary
+
+A simplified explanation of node performance measuring is that the [Node Status API](https://node-status.nym.com) runs [gateway probes](/operators/nodes/performance-and-testing/gateway-probe) that connect to gateways to:
+
+- Check the configuration of gateways
+  - Checks a list of capabilities (e.g. can route ipv4 traffic in mixnet mode)
+  - Checks a list of configuration (e.g. runs IPR, has exit policy)
+- Acts like a user:
+  - Registers a mixnet client
+  - Registers a wireguard peer and tops up bandwidth with a zk-nym
+  - Sends ICMP ping packets
+  - Downloads files
+
+The results are collected and stored in the [Node Status API](https://node-status.nym.com) and can be also veiwed per node in [Node Status Observatory](https://harbourmaster.nymtech.net).
+
+The [NymVPN API directory](https://nymvpn.com/api/public/v1/directory/gateways) cache uses the output of the gateway probes to calculate and display hints to users about the contention on each gateway and what they might expect if they use the gateway. The section [*Gateway Roles & Requirements* below](#gateway-roles--requirements) explains how are these stats measured and what is their significance.
+
+### Performance Score
+
+Gateways are listed in NymVPN application displaying various stats.
+
+![](/images/operators/nym-vpn-sceenshots/nym-vpn-score1.png)
+
+There are four colored score bars.
+
+![](/images/operators/nym-vpn-sceenshots/nym-vpn-score2.png)
+
+This is how they are defined:
+
+<Steps>
+
+###### 1. Overall performance: 
+
+Calculated by mixnet performance score multiplied by WireGuard performance, this is the formula: 
+<Callout type="info" emoji="📌">
+> **mixnet_performance * (download_speed_score * ping_ips_performance_v4)**
+</Callout>
+- <Green>High</Green>: `> 75%`
+- <Yellow>Medium</Yellow>: `> 50%`
+- <Red>Low</Red>: > `10%`
+- <Gray>Offline</Gray>: ≤ `10%`
+
+- **Download speed scoring:** 
+<Callout type="info" emoji="📌">
+> **\> 5 Mbps = 1.0** <br />
+> **\> 2 Mbps = 0.75** <br />
+> **\> 1 Mbps = 0.5** <br />
+> **\> 0.5 Mbps = 0.25** <br />
+> **otherwise = 0.1**
+</Callout>
+
+
+###### 2. Server Load
+
+A load indicator based on ping success
+
+- <Green>Low</Green>: `> 80%` ping success (low load)
+- <Yellow>Medium</Yellow>: `> 40%` ping success (medium load)
+- <Red>High</Red>: `≤ 40%` ping success (node under stress, high load)
+
+###### 3. Uptime:
+
+A routing score of Mixnet (5-hop) is indicated this way:
+- <Green>High</Green>: `> 80%` mixnet packet delivery success
+- <Yellow>Medium</Yellow>: `> 60%` mixnet packet delivery success
+- <Red>Low</Red>: `> 10%` mixnet packet delivery success
+- <Gray>Offline</Gray>: `≤ 10%` mixnet packet delivery success
+
+</Steps>
+
+See the [section below](#gateway-roles--requirements) to understand how these stats get measured.
+
+<Callout>
+You can find more details [directly in the code](https://github.com/nymtech/nym-vpn-client/blob/develop/nym-vpn-app/src/hooks/useScore.ts#L10).
+</Callout>
+
 
 ### Gateway Roles & Requirements
 
@@ -42,7 +117,7 @@ Here is a basic node configuration break down coming alongside basic [server con
 
 ### How Probe Works
 
-Nym Gateway probe is perfomance measurement program running tests through various routes following the logic described below. Operators can rown their [local instance of Gateway probe](/operators/nodes/performance-and-testing/gateway-probe) or use visit of our dashboards to conveniently see probe results.
+Nym Gateway probe is perfomance measurement program running tests through various routes following the order of events described below. Operators can runn their [local instance of Gateway probe](/operators/nodes/performance-and-testing/gateway-probe) or use visit of our dashboards to conveniently see probe results.
 
 - [Node Status dashboard](https://node-status.nym.com/dvpn): Shows latest probe results on one board
 - [Nym Node Status Observatory](https://harbourmaster.nymtech.net): New version of a good old Nym Harbourmaster, allowing operators preview stats of each node
@@ -96,38 +171,6 @@ Nym Gateway probe is perfomance measurement program running tests through variou
 - Reduce server latency/jitter (depends on provider and location)
 - Ensure DNS resolvers are reliable
 - Pass the `--wireguard-enabled true` flag in the node config
-
-
-### Performance Score
-
-1. **`mixnet_score`: Mixnet routing performance**
-- **High**: > 80% mixnet packet delivery success
-- **Medium**: > 60% mixnet packet delivery success
-- **Low**: > 10% mixnet packet delivery success
-- **Offline**: ≤ 10% mixnet packet delivery success
-
-2. **`score` (Overall): `mixnet routing * WireGuard performance`**
-- Formula:
-```
-mixnet_performance * (download_speed_score * ping_ips_performance_v4)
-```
-- Download speed scoring:
-```
-> 5 Mbps = 1.0
-> 2 Mbps = 0.75
-> 1 Mbps = 0.5
-> 0.5 Mbps = 0.25
-otherwise = 0.1
-```
-- **High**: > 75%
-- **Medium**: > 50%
-- **Low**: > 10%
-- **Offline**: ≤ 10%
-
-3. **`load`: Node health indicator (based on ping success)**
-- **Low**: > 80% ping success (low load)
-- **Medium**: > 40% ping success
-- **High**: ≤ 40% ping success (node under stress, high load)
 
 ### **Probe Freshness**
 
