improve quic script dwl way

--- a/documentation/docs/components/operators/snippets/quic-bridge-deployment-script-setup.mdx
+++ b/documentation/docs/components/operators/snippets/quic-bridge-deployment-script-setup.mdx
@@ -18,7 +18,7 @@ Operators can use [Nym Bridge Configuration Tool](https://github.com/nymtech/nym
 - **Run as root**
 - Download the script and make executable
 ```sh
-wget https://raw.githubusercontent.com/nymtech/nym/refs/heads/develop/scripts/nym-node-setup/quic_bridge_deployment.sh && \
+curl -L https://raw.githubusercontent.com/nymtech/nym/refs/heads/develop/scripts/nym-node-setup/quic_bridge_deployment.sh -o quic_bridge_deployment.sh && \
 chmod +x quic_bridge_deployment.sh
 ```
 
