--- a/documentation/docs/pages/operators/introduction.mdx
+++ b/documentation/docs/pages/operators/introduction.mdx
@@ -40,6 +40,9 @@ If you want to explore kickstart options and examples, learn how to integrate wi
 * [Validators](nodes/validator-setup.mdx)
 * [Nym API Setup](nodes/validator-setup/nym-api.mdx)
 
+**Performance Monitoring**
+* [Performance, probe and measurements](performance-and-testing)
+
 **Tokenomics, rewards and roadmap**
 * [General tokenomics page](tokenomics.mdx)
 * [Nym Node rewards page](tokenomics/mixnet-rewards.mdx)
