--- a/documentation/docs/pages/operators/tokenomics/mixnet-rewards.mdx
+++ b/documentation/docs/pages/operators/tokenomics/mixnet-rewards.mdx
@@ -11,6 +11,7 @@ import StakeSaturation from 'components/outputs/api-scraping-outputs/nyx-outputs
 import StakeSaturationSnippet from 'components/operators/snippets/stake-saturation.mdx';
 import CirculatingSupply from 'components/outputs/api-scraping-outputs/nyx-outputs/circulating-supply.md';
 import StakingTarget from 'components/outputs/api-scraping-outputs/nyx-outputs/staking-target.md';
+import NodePerfMixnet from 'components/operators/snippets/node-perf-mixnet.mdx';
 import { TimeNow } from 'components/time-now.tsx';
 import { AccordionTemplate } from 'components/accordion-template.tsx';
 import { Clt } from 'components/callout-custom/CalloutCustom.jsx';
@@ -57,7 +58,7 @@ Nodes bonded with vesting tokens are [not allowed to join rewarded set](https://
 
 ## Rewards Logic & Overview
 
-This is a quick summary, to understand the logic behind fundamentals like [rewarded set selection](#rewarded-set-selection), [node performance](#node-performance-calculation), [stake saturation](#stake-saturation), or [rewards calculation](#rewards-calculation), please read the chapters below.
+This is a quick summary, to understand the logic behind fundamentals like [rewarded set selection](#rewarded-set-selection), [node performance](#mixnet-node-performance-calculation), [stake saturation](#stake-saturation), or [rewards calculation](#rewards-calculation), please read the chapters below.
 
 * **The current reward system is called [*Naive rewarding*](#naive-rewarding) - an intermediate step - where the operators of `nym-node` get rewarded from [Mixmining pool](https://validator.nymtech.net/api/v1/epoch/reward_params), which emits <span style={{display: 'inline-block'}}><EpochRewardBudget /></span> NYM per hour**
 * **Only nodes selected to [rewarded set](../tokenomics.mdx#active-set) of Mixnet receive rewards**
@@ -67,7 +68,7 @@ This is a quick summary, to understand the logic behind fundamentals like [rewar
 * If a node is selected to the rewarded set, it will be rewarded in the end of the epoch, based on this reward calculation formula:
 
 <Callout type="info" emoji="📌">
-> **node_epoch_rewards = [total_epoch_reward_budget](https://validator.nymtech.net/api/v1/epoch/reward_params) \* <abbr title="In Naive rewarding the node work fraction is same for all nodes in the active set">node_work_fraction</abbr> \* [node_stake_saturation](#stake-saturation) \* [node_performance](#node-performance-calculation)**
+> **node_epoch_rewards = [total_epoch_reward_budget](https://validator.nymtech.net/api/v1/epoch/reward_params) \* <abbr title="In Naive rewarding the node work fraction is same for all nodes in the active set">node_work_fraction</abbr> \* [node_stake_saturation](#stake-saturation) \* [node_performance](#mixnet-node-performance-calculation)**
 >
 > We know that: <br/>
 > **[total_epoch_reward_budget](https://validator.nymtech.net/api/v1/epoch/reward_params) = <span style={{display: 'inline-block'}}><EpochRewardBudget /></span>** <br/>
@@ -75,7 +76,7 @@ This is a quick summary, to understand the logic behind fundamentals like [rewar
 > **[active_set_size](https://validator.nymtech.net/api/v1/epoch/reward_params) = 240**
 >
 > Therefore: <br/>
-> **node_epoch_rewards = <span style={{display: 'inline-block'}}><EpochRewardBudget /></span> \* 1 / 240 \* [node_stake_saturation](#stake-saturation) \* [node_performance](#node-performance-calculation)**
+> **node_epoch_rewards = <span style={{display: 'inline-block'}}><EpochRewardBudget /></span> \* 1 / 240 \* [node_stake_saturation](#stake-saturation) \* [node_performance](#mixnet-node-performance-calculation)**
 </Callout>
 
 In reality there is a an additional value called **&alpha;**, giving a premium to nodes with a higher self bond. And additionally an operator gets more rewards based on [*Operators cost*](#rewards-distribution) and [*Profit margin*](#rewards-distribution) size. **Read chapter [Rewards calculation](#rewards-calculation) to be able to navigate in all the details relevant for operators and delegators.**
@@ -163,7 +164,7 @@ For a node to be rewarded, the node must be part of a [Rewarded set](https://val
 
 Nodes selected into the rewarded set are chosen probabilisticaly, and their selection chances increase the larger nodes weight is. Weight value is always between `0` and `1` and it's calculated by multiplying these parameters, each of them also having a value between `0` and `1` (some are floats, some are binary):
 
-**1. [Performance](#node-performance-calculation):** This value consists of:
+**1. [Performance](#mixnet-node-performance-calculation):** This value consists of:
 - [Config score](#config-score-calculation): highest (`1`) when the node is running the latest version of the software, has [T&C's accepted](../nodes/nym-node/setup.mdx#terms--conditions) and self described API endpoint available
 - [Routing ](#routing-score-calculation): highest (`1`) when the node is consistently online and correctly processes all the received traffic (100% of time)
 
@@ -175,7 +176,7 @@ Nodes selected into the rewarded set are chosen probabilisticaly, and their sele
 > **active_set_selection_weight = stake_saturation \* ( node_performance ^ 20 )**
 </Callout>
 
-For the rewarded set selection weight, good [performance](#node-performance-calculation) is much more essential than [stake saturation](#stake-saturation), because it's lifted to 20th power in the selection algorhitm.
+For the rewarded set selection weight, good [performance](#mixnet-node-performance-calculation) is much more essential than [stake saturation](#stake-saturation), because it's lifted to 20th power in the selection algorhitm.
 
 For a comparison we made an example with 5 nodes, where first number is node performance and second stake saturation (assuming all of them [`config_score`](#config-score-calculation) = `1` for simplification):
 
@@ -268,99 +269,10 @@ weight_total = 95
 In reality we have mixing nodes selected into 3 layers. To increase security, there is an additional function in place where a node cannot be assigned to the same layer in two following epochs.
 </AccordionTemplate>
 
-Below we break down [performance calculation](#node-performance-calculation) and show examples.
+Below we break down [performance calculation](#mixnet-node-performance-calculation) and show examples.
 
 
-## Node Performance Calculation
-
-Performance is a value between `0` and `1`. The final performance number is a result of multiplying [config score](#config-score-calculation) and [routing score](#routing-score-calculation).
-
-<Callout type="info" emoji="📌">
-> **node_performance = config_score \* routing_score**
-</Callout>
-
-Performance value is an average of last 24h.
-
-<Callout>
-All parameters regarding performance score can be browsed or pull live from:
-
-`https://validator.nymtech.net/api/v1/nym-nodes/annotation/<NODE_ID>`
-
-In case you don't know your nodes `NODE_ID`, it's easy to find as long as your node is bonded. Visit [validator.nymtech.net/api/v1/nym-nodes/bonded](https://validator.nymtech.net/api/v1/nym-nodes/bonded) and search your node using `identity_key` or bonding Nyx account address (denoted as `owner`).
-</Callout>
-
-### Config Score Calculation
-
-Config score is in place to ensure that the node configuration is done properly so the node is eligible for taking part in Nym network. The API looks into these paramteres:
-
-1. If the node binary is `nym-node` (not legacy `nym-mixnode` or `nym-gateway`): `1` if `True`, `0` if `False`
-2. If [Terms & Conditions](../nodes/nym-node/setup.mdx#terms--conditions) are accepted: `1` if `True`, `0` if `False`
-3. If the nodes self described endpoint is available: `1` if `True`, `0` if `False`
-4. Version of `nym-node` binary: decreasing weight for outdated versions, as [explained below](#versions-behind-calculation)
-
-**The `config_score` calculation formula:**
-
-<Callout type="info" emoji="📌">
-> **config_score = is_tc_accepted \* is_nym-node_binary \* self_described_api_available \* ( 0.995 ^ ( ( X * versions_behind) ^ 1.65 ) )**
-</Callout>
-
-First three points have binary values of either `0` or `1`, with a following logic:
-
-| **Run `nym-node` binary** | **T&C's accepted** | **Self described available** | **Value** |
-| :--                       | :--                | :--                          | ---:      |
-| **True**                  | **True**           | **True**                     | **1**     |
-| True                      | False              | False                        | 0         |
-| True                      | True               | False                        | 0         |
-| False                     | True               | True                         | 0         |
-| False                     | False              | True                         | 0         |
-| True                      | False              | True                         | 0         |
-| False                     | False              | False                        | 0         |
-| False                     | True               | False                        | 0         |
-
-**Only if ALL conditions above are `True` the node can have any chance to be selected, as otherwise the probability will always be 0.**
-
-<Callout type="info" emoji="ℹ️">
-Besides these values, the API also checks whether the node is bonded in Mixnet smart contract as a Nym Node or legacy node (Mixnode or Gateway). **Only nodes bonded as Nym Node in Mixnet smart contract can be selected to the Rewrded set. Thus, if you haven't migrated your node yet, please [follow these steps](../nodes/nym-node/bonding#migrate-to-nym-node-in-mixnet-smart-contract)!**
-</ Callout>
-
-#### Versions Behind Calculation
-
-From release `2024.14-crunch` (`nym-node v1.2.0`), the `config_score` parameter takes into account also nodes version (denoted as `versions_behind`). The "current version" is the one marked as `Latest` in the [repository](https://github.com/nymtech/nym/releases/). The parameter `versions_behind` indicates the number of versions between the `Latest` version and the version run by the node, and it is factored into the config score with this formula:
-
-<Callout type="info" emoji="📌">
-> **0.995 ^ ( ( X * versions_behind ) ^ 1.65 )**
->
-> where: <br />
-> **X = 1;       for patches** <br />
-> **X = 10;      for minor versions** <br />
-> **X = 100;     for major versions**
-</Callout>
-
-> The exact parameters are live accessible on [`/v1/status/config-score-details`](https://validator.nymtech.net/api/swagger/index.html#/Status/config_score_details).
-
-Our versioning convention is: `major_version . minor_version . patch`
-
-For example `nym-node` on version `1.2.0` is on 1st major version, 2nd minor and 0 patches.
-
-Note that the `X` multiplier heavily lowers the `config_score` when nodes are outdated with respect to more significant updates. See the the table and graph below:
-
-| **Version behind**  | **Patches (X = 1)** | **Minor versions (X = 10)** | **Major versions (X = 100)** |
-| :--                 | --:       | --: | --: |
-| 0 (current version) | 1.0 | 1.0 | 1.0 |
-| 1 | 0.995 | 0.7994 | 0.0000 |
-| 2 | 0.9844 | 0.4953 | 0.0000 |
-| 3 | 0.9698 | 0.2536 | 0.0000 |
-| 4 | 0.9518 | 0.1102 | 0.0000 |
-| 5 | 0.9311 | 0.0413 | 0.0000 |
-
-
-![](/images/operators/tokenomics/reward_version_graph.png)
-
-As you can see above, the algorithm is designed to give maximum selection score (`1`) to the latest version, while non-upgraded nodes receive a lower score. The score decreases faster when the node has failed to make a major version upgrade, and slower when the node is behind only with minor updates. This scoring de-prioritizes the selection of outdated nodes, even if their saturation and performance are high. Nodes are selected probabilistically in each epoch (60 min), according to their scores, to be part of the Rewarded set. This scoring mechanism gives priority to the operators running up-to-date nodes, ensuring that the network is as updated as possible.
-
-### Routing Score Calculation
-
-Routing score is measured by Nym Network Monitor which sends thousands of packages through different routes every 15 minutes and measures how many were dropped on the way. Test result represents percentage of packets succesfully returned which are then converted into floats bettween `0` and `1`.
+<NodePerfMixnet />
 
 ## Stake Saturation
 
@@ -378,7 +290,7 @@ If a node is active in the rewarded set, it will receive rewards in the end of t
 **Node rewards calculation formula:**
 
 <Callout type="info" emoji="📌">
-> **node_epoch_rewards = [total_epoch_reward_budget](https://validator.nymtech.net/api/v1/epoch/reward_params) \* [node_performance](#node-performance-calculation) \* [node_stake_saturation](#stake-saturation) \* ( <abbr title="In Naive rewarding the node work fraction is same for all nodes in the active set">node_work_fraction</abbr> + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">&alpha;</abbr> \* ( ( <abbr title="The actual number of tokens in the bond. Node bond size is capped at stake saturation level.">node_bond_size</abbr> / [stake_saturation_level](https://validator.nymtech.net/api/v1/epoch/reward_params) ) / rewarded_set_size ) ) \* 1 / ( 1 + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">&alpha;</abbr> )**
+> **node_epoch_rewards = [total_epoch_reward_budget](https://validator.nymtech.net/api/v1/epoch/reward_params) \* [node_performance](#mixnet-node-performance-calculation) \* [node_stake_saturation](#stake-saturation) \* ( <abbr title="In Naive rewarding the node work fraction is same for all nodes in the active set">node_work_fraction</abbr> + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">&alpha;</abbr> \* ( ( <abbr title="The actual number of tokens in the bond. Node bond size is capped at stake saturation level.">node_bond_size</abbr> / [stake_saturation_level](https://validator.nymtech.net/api/v1/epoch/reward_params) ) / rewarded_set_size ) ) \* 1 / ( 1 + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">&alpha;</abbr> )**
 >
 > Where: <br/>
 > **[total_epoch_reward_budget](https://validator.nymtech.net/api/v1/epoch/reward_params) = <span style={{display: 'inline-block'}}><EpochRewardBudget /></span>** <br/>
@@ -388,7 +300,7 @@ If a node is active in the rewarded set, it will receive rewards in the end of t
 > **&alpha; = <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">0.3</abbr>**
 >
 > Therefore: <br/>
-> **node_epoch_rewards = <span style={{display: 'inline-block'}}><EpochRewardBudget /></span> \* [node_performance](#node-performance-calculation) \* [node_stake_saturation](#stake-saturation) \* ( <abbr title="In Naive rewarding the node work fraction is same for all nodes in the active set">( 1 / 240 )</abbr> + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">0.3</abbr> \* ( (  <abbr title="The actual number of tokens in the bond. Node bond size is capped at stake saturation level.">node_bond_size</abbr> / <span style={{display: 'inline-block'}}><StakeSaturation /></span> ) / 240 ) ) \* 1 / ( 1 + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">0.3</abbr> )**
+> **node_epoch_rewards = <span style={{display: 'inline-block'}}><EpochRewardBudget /></span> \* [node_performance](#mixnet-node-performance-calculation) \* [node_stake_saturation](#stake-saturation) \* ( <abbr title="In Naive rewarding the node work fraction is same for all nodes in the active set">( 1 / 240 )</abbr> + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">0.3</abbr> \* ( (  <abbr title="The actual number of tokens in the bond. Node bond size is capped at stake saturation level.">node_bond_size</abbr> / <span style={{display: 'inline-block'}}><StakeSaturation /></span> ) / 240 ) ) \* 1 / ( 1 + <abbr title="&alpha; is a constant (0.3) working as a premium for nodes with higher self bond">0.3</abbr> )**
 </Callout>
 
 Performance and stake saturation (both are a float between `0` and `1` representing percentage) play an equally decisive role in the size of rewards earned after the epoch. The closer a node is to maximum value (`1`) of each of these parameters, the more rewards it will get.
