[Docs/operators]: Performance measurement pages (#6177)
* initialise wg perf docs

* fix paths to absolute

* fix paths to absolute

* vpn coloring guide

* improve quic script dwl way

* refactor operators menu structure

* create probe-details page

* wg syntax change

* modified time

* fix link paths

* remove redundancy

* fix comments & bump stats

--- a/documentation/docs/pages/operators/performance-and-testing.mdx
+++ b/documentation/docs/pages/operators/performance-and-testing.mdx
@@ -1,18 +1,39 @@
 import { Callout } from 'nextra/components';
+import { Tabs } from 'nextra/components';
+import { MyTab } from 'components/generic-tabs.tsx';
+import { AccordionTemplate } from 'components/accordion-template.tsx';
+import NodePerfWG from 'components/operators/snippets/node-perf-wg.mdx';
+import NodePerfMixnet from 'components/operators/snippets/node-perf-mixnet.mdx';
 
 # Performance Monitoring & Testing
 
-Nym Mixnet has been running on mainnet for quite some time. There is still work to be done in order for the network to meet its full potential - mass adoption of privacy through fully distributed Mixnet.
+Nym Mixnet has been running on mainnet for quite some time. There is still work to be done in order for the network to meet its full potential - mass adoption of privacy through distributed Mixnet.
 
-As developers we need to be constantly improving the software. Operators have as much important role, keep their nodes up to date, monitor their performance and share their feedback with the rest of the community and core developers.
+As Nym developers constantly improve the software, operators have as much important role, keep their nodes up to date, monitor their performance and share feedback with the rest of the community and Nym team. Therefore [monitoring](#monitoring) node performance is an essential pillar of our common work. 
 
-Therefore [monitoring](#monitoring) and [testing](#testing) are essential pieces of our common work. We call out all Nym operators to join the efforts!
+Nym Network is routed either through the Mixnet (5-hop) or through Wireguard (2-hop). In all cases Nym node operators always employ only one binary called [`nym-node`](/operators/nodes/nym-node). Through provided arguments (or changes in the config file), `nym-node` can be utilised for different [functionalities](/operators/nodes/nym-node/setup#functionality-mode). However, once it's [registered to Nym Network](/operators/nodes/nym-node/bonding) it's by default available for Nym Mixnet not for Wireguard routing. Only nodes with Wireguard enabled, are also available for Wireguard routing. This creates a situation where every Wireguard enabled `nym-node` is required to have a solid performance score in Mixnet to begin with, but not every Mixnet routing `nym-node` must have Wireguard enabled. 
+
+Given this complexity, we divided the part below about perfromance calculation logic and node selection into two parallel tabs: Mixnet and Wireguard. 
+
+<div>
+  <Tabs items={[
+    <strong>Mixnet: Nodes Performance Calculation</strong>,
+    <strong>WireGuard: Gateways Performance Calculation</strong>,
+    ]} defaultIndex="0">
+    <MyTab><NodePerfMixnet /></MyTab>
+    <MyTab><NodePerfWG /></MyTab>
+  </Tabs>
+</div>
+
 
 ## Functionality & Performance Check
 
-If you want to just quickly check your nodes performance, connectivity and much more, visit [harbourmaster.nymtech.net](https://harbourmaster.nymtech.net/).
+If you want to check your nodes performance, connectivity and much more, see some of the dashobards:
 
-For more information about available endpoints and their status, you can refer to:
+- [Node Status dashboard](https://node-status.nym.com/dvpn): Shows latest probe results on one board
+- [Nym Node Status Observatory](https://harbourmaster.nymtech.net): New version of a good old Nym Harbourmaster, allowing operators preview stats of each node
+
+For more information about available endpoints and their status, you can refer to [`nymvpn.com/api/public/v1/directory/gateways`](https://nymvpn.com/api/public/v1/directory/gateways) or see directly self described endpoints of your node:
 ```sh
 # sustitude <IPv4_ADDRESS> or <HOSTNAME> with the one corresponding to your node
 # for http
@@ -23,7 +44,7 @@ http://<IPv4_ADDRESS>/api/v1/swagger/#/
 # for reversed proxy/WSS
 https://<HOSTNAME>/api/v1/swagger/#/
 ```
-
+<AccordionTemplate name="✏️ Example: Accessing self-described endpoints">
 For example to determine which mode your node is running, you can check the `:8080/api/v1/roles` endpoint:
 ```sh
 # sustitude <IPv4_ADDRESS> or <HOSTNAME> with the one corresponding to your node
@@ -35,6 +56,7 @@ http://<IPv4_ADDRESS>/api/v1/roles
 # for reversed proxy/WSS
 https://<HOSTNAME>/api/v1/roles
 ```
+</AccordionTemplate>
 
 ## Monitoring
 
@@ -44,7 +66,7 @@ There are multiple ways to monitor performance of nodes and the machines on whic
 
 A list of different scripts, templates and guides for easier navigation:
 
-* [`nym-gateway-probe`](perfomance-and-testing/gateway-probe.mdx) - a useful tool used under the hood of [harbourmaster.nymtech.net](https://harbourmaster.nymtech.net)
+* [`nym-gateway-probe`](performance-and-testing/gateway-probe.mdx) - a useful tool used under the hood of [Node status Observatory](https://harbourmaster.nymtech.net)
 * [Prometheus and Grafana](performance-and-testing/prometheus-grafana.mdx) self-hosted setup
 * [Nym-node CPU cron service](https://gist.github.com/tommyv1987/97e939a7adf491333d686a8eaa68d4bd) - an easy bash script by Nym core developer [@tommy1987](https://gist.github.com/tommyv1987), designed to monitor a CPU usage of your node, running locally
 * Nym's script [`prom_targets.py`](https://github.com/nymtech/nym/blob/develop/scripts/prom_targets.py) - a useful python program to request data from API and can be run on its own or plugged to more sophisticated flows
@@ -53,7 +75,7 @@ A list of different scripts, templates and guides for easier navigation:
 
 For the purpose of the performance testing Nym core developers plan to run instances of Prometheus and Grafana connected to Node explorer in the house. The network overall key insights we seek from these tests are primarily internal. We're focused on pinpointing bottlenecks, capacity loads, and monitoring cpu usage on the nodes' machines.
 
-
+{/* LEAVING THIS BIT FOR FUTURE F&F CASES:
 ## Testing
 
 <Callout type="info" emoji="ℹ️">
@@ -73,3 +95,4 @@ We do testing in order to **understand and increase the overall quality of the N
 7. Adjust rewarding based on the machine specs and server pricing
 
 Visit [Nym Harbour Master](https://harbourmaster.nymtech.net/) monitoring page to monitor network components (nodes) performance.
+*/}
