--- a/documentation/docs/code-examples/sdk/typescript/mixfetch-example-code.mdx
+++ b/documentation/docs/code-examples/sdk/typescript/mixfetch-example-code.mdx
@@ -1,27 +1,26 @@
-```ts copy filename="mixFetchExample.tsx"
-import React, { useState } from 'react';
-import CircularProgress from '@mui/material/CircularProgress';
-import Button from '@mui/material/Button';
-import TextField from '@mui/material/TextField';
-import Typography from '@mui/material/Typography';
-import Box from '@mui/material/Box';
-import { mixFetch } from '@nymproject/mix-fetch-full-fat';
-import Stack from '@mui/material/Stack';
-import Paper from '@mui/material/Paper';
-import type { SetupMixFetchOps } from '@nymproject/mix-fetch';
+```tsx copy filename="mixFetchExample.tsx"
+import React, { useState } from "react";
+import CircularProgress from "@mui/material/CircularProgress";
+import Button from "@mui/material/Button";
+import TextField from "@mui/material/TextField";
+import Typography from "@mui/material/Typography";
+import Box from "@mui/material/Box";
+import { mixFetch } from "@nymproject/mix-fetch-full-fat";
+import Stack from "@mui/material/Stack";
+import Paper from "@mui/material/Paper";
+import type { SetupMixFetchOps } from "@nymproject/mix-fetch-full-fat";
 
-const defaultUrl = 'https://nym.com/favicon.svg';
-const args = { mode: 'unsafe-ignore-cors' };
+const defaultUrl = "https://nymtech.net/.wellknown/network-requester/exit-policy.txt";
+const args = { mode: "unsafe-ignore-cors" };
 
 const mixFetchOptions: SetupMixFetchOps = {
-  preferredGateway: '6Gb7ftQdKveMjPyrxDXeAtfYAX7Zg5mVZHtnRC5MmZ1B', // with WSS
-  preferredNetworkRequester:
-    '8rRGWy54oC8drFL9DepMegBt2DLrsqQwCoHMXt9nsnTo.2XjCPVbb4FpQ9hNRcXwb9mTzEAVVk1zf1tcch3wdtNEA@6Gb7ftQdKveMjPyrxDXeAtfYAX7Zg5mVZHtnRC5MmZ1B',
+  preferredGateway: "2xU4CBE6QiiYt6EyBXSALwxkNvM7gqJfjHXaMkjiFmYW", // with WSS
+  // preferredNetworkRequester:
+  //   "CTDxrcXgrZHWyCWnuCgjpJPghQUcEVz1HkhUr5mGdFnT.3UAww1YWNyVNYNWFQL1LaHYouQtDiXBGK5GiDZgpXkTK@2RFtU5BwxvJJXagAWAEuaPgb5ZVPRoy2542TT93Edw6v",
   mixFetchOverride: {
     requestTimeoutMs: 60_000,
   },
   forceTls: true, // force WSS
-  extra: {},
 };
 
 export const MixFetch = () => {
@@ -45,7 +44,7 @@ export const MixFetch = () => {
   };
 
   return (
-    <div style={{ marginTop: '1rem' }}>
+    <div style={{ marginTop: "1rem" }}>
       <Stack direction="row">
         <TextField
           disabled={busy}
@@ -56,7 +55,12 @@ export const MixFetch = () => {
           defaultValue={defaultUrl}
           onChange={(e) => setUrl(e.target.value)}
         />
-        <Button variant="outlined" disabled={busy} sx={{ marginLeft: '1rem' }} onClick={handleFetch}>
+        <Button
+          variant="outlined"
+          disabled={busy}
+          sx={{ marginLeft: "1rem" }}
+          onClick={handleFetch}
+        >
           Fetch
         </Button>
       </Stack>
