--- a/documentation/docs/pages/operators/nodes/nym-node/bonding.mdx
+++ b/documentation/docs/pages/operators/nodes/nym-node/bonding.mdx
@@ -79,7 +79,7 @@ If you are part of [Nym Delegation Program](https://delegations.explorenym.net) 
 - You will be asked to run a `sign` command with your `nym-node` - copy and paste the long signature as the value of `--contract-msg` and sing it on your VPS:
 
 ```sh
-./nym-node sign --contract-msg <PAYLOAD_GENERATED_BY_THE_WALLET>
+./nym-node sign --id <ID> --contract-msg <PAYLOAD_GENERATED_BY_THE_WALLET>
 ```
 
 - Copy the resulting signature string and paste it into the wallet nodal, press `Next` and confirm the transaction:
